# cuda-tasks

./: .gitignore  PROJECT_STRUCTURE.md  README.md  SETUP_DEPENDENCIES.md
.claude/: settings.local.json
Task 1/: .gitignore  BUILD.md  CMakeLists.txt  README.md  RESULTS.md
Task 1/include/: matrix_utils.h
Task 1/results/: block_size_results.csv  scalability_results.csv
Task 1/src/: cpu_transpose.cpp  main.cpp  matrix_transpose.cu
Task 2/: .gitignore  BUILD.md  CMakeLists.txt  README.md  RESULTS.md
Task 2/include/: convolution.h
Task 2/results/: gaussian_results.csv  perf_1024_k3.csv  perf_1024_k5.csv  perf_1024_k7.csv  perf_256_k3.csv  perf_256_k5.csv  perf_256_k7.csv  perf_512_k3.csv  perf_512_k5.csv  perf_512_k7.csv
Task 2/src/: cpu_convolution.cpp  cuda_convolution.cu  image_utils.cpp  main.cpp
Task 3/: .gitignore  BUILD_INSTRUCTIONS.md  README.md  README_HDR_IMPLEMENTATION.md  RESULTS.md
Task 3/cuda-webcam-filter/: .gitignore  CMakeLists.txt
Task 3/cuda-webcam-filter/src/: main.cpp
Task 3/cuda-webcam-filter/src/input_args_parser/: input_args_parser.cpp  input_args_parser.h
Task 3/cuda-webcam-filter/src/kernels/: convolution_kernels.cu  kernels.h
Task 3/cuda-webcam-filter/src/utils/: filter_utils.cpp  filter_utils.h
Task 4/: .gitignore  BUILD_INSTRUCTIONS.md  README.md  RESULTS.md
Task 4/cuda-webcam-filter/: CMakeLists.txt  README.md
Task 4/cuda-webcam-filter/src/: main.cpp
Task 4/cuda-webcam-filter/src/input_args_parser/: input_args_parser.cpp  input_args_parser.h
Task 4/cuda-webcam-filter/src/kernels/: convolution_kernels.cu  kernels.h
Task 4/cuda-webcam-filter/src/utils/: filter_pipeline.cpp  filter_pipeline.h  filter_utils.h
